# 02asi

./: .gitignore  AGENTS.md  README.md
code_py/: .gitignore  02asi.ipynb  AGENTS.md  README.md  main.py  nbkernel.py  pyproject.toml
